# BitCoinTrader

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json  xmake.lua
.github/workflows/: main.yml
common/config/: config.h  options.h
common/context/: context.cpp  context.h
common/http/: WebSocket.cpp  WebSocket.h  connect.cpp  connect.h  request.cpp  request.h
common/include/: WebSocket.h  errcode.h  utils.h
common/utils/: component.hpp  errcode.h  mapping.hpp  type_traits.hpp  utils.cpp  utils.h
common/websocket/: WebSocket.cpp
config/: config.h  options.h
engine/: engine.cpp  engine.h  object.h
log/base/: log.cpp  log.h
market/base/: gateway.cpp  gateway.h
market/binance/: data_detail.h  ws_vision.cpp  ws_vision.h
market/market/: market_data.h  public_api.h  public_depth_api.cpp  public_depth_api.h  public_trade_api.cpp  public_trade_api.h
market/okx/: api.cpp  api.h  data.hpp  okx.cpp  okx.h  okx_http.cpp  okx_http.h  okx_ws.cpp  okx_ws.h  rest_api.cpp  rest_api.h  rest_api_detail.cpp  rest_api_detail.h  websocket_api.cpp  websocket_api.h  websocket_api_detail.cpp  websocket_api_detail.h  websocket_api_detail.hpp  ws_public_api.cpp  ws_public_api.h
notice/base/: notice.cpp  notice.h
notice/wework/: wework.cpp  wework.h
record/: record.cpp  record.h
service/compare/: compare.cpp  compare.h
stragy/base/: stragy.cpp  stragy.h
stragy/testing/: testing.cpp  testing.h
strategy/base/: strategy.cpp  strategy.h
strategy/testing/: testing.cpp  testing.h
